maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:40: error: '(' expected but identifier found.
{if !estSurBiscuit() {return(Direction.NORTH)}
    ^ShortestPathMaze:41: error: illegal start of simple expression
 val (x,y) = (getX(),getY())
 ^